--- a/src/app/child1/dynamic1/dynamic1.component.html
+++ b/src/app/child1/dynamic1/dynamic1.component.html
@@ -1,3 +1,7 @@
 <p>
 I am dynamically created component using component selector 'app-dynamic1'
 </p>
+
+<p>
+  <b>Input Variable Value</b>: {{inputValue}}
+</p>
